--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,38 +1,107 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.banner {
+  height: calc(100vh - 64px);
+}
+@media screen and (max-width: 1280px) {
+  .banner {
+    height: auto;
+  }
+}
+.container {
+  width: 100%;
+  max-width: 1300px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.lg-container {
+  width: 100%;
+  max-width: 1520px;
+  padding-right: 40px;
+  padding-left: 40px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+  .lg-container {
+    max-width: 1140px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+  .lg-container {
+    max-width: 960px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+  .lg-container {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+  .lg-container {
+    max-width: 540px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+
+@font-face {
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/Arimo/static/Arimo-Regular.ttf')
+    format("truetype");
+}
+@font-face {
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/Arimo/static/Arimo-Medium.ttf')
+    format("truetype");
+}
+@font-face {
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('/fonts/Arimo/static/Arimo-SemiBold.ttf')
+    format("truetype");
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: white;
+  font-family: "Arimo", sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.swiper-pagination-bullet-active {
+  outline: 1px solid #fec33b;
+  outline-offset: 3px;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-h1,
-h2,
-p,
-ul {
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
-}
-
-button {
-  padding: 0.5rem 1rem;
-  font-weight: bold;
+*::selection {
+  background-color: #fec33b;
+  color: white;
 }
