--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,6 @@
 .banner {
   height: calc(100vh - 64px);
 }
-@media screen and (max-width: 1280px) {
-  .banner {
-    height: auto;
-  }
-}
 .container {
   width: 100%;
   max-width: 1300px;
@@ -44,6 +39,9 @@
   .lg-container {
     max-width: 960px;
   }
+  .banner {
+    height: 300px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -63,6 +61,9 @@
     max-width: 540px;
     padding-left: 12px;
     padding-right: 12px;
+  }
+  .banner {
+    height: 200px;
   }
 }
 
